# fastparticles

./: .gitignore  README.md  pyproject.toml  pytest.ini
examples/: crossover_manifold.ipynb  crossover_manifold.py
simulation/: crossover_manifold.ipynb  crossover_manifold.py  furstenberg.py  independentparticles.ipynb  main.jl  manybody.ipynb  matrixensembles.py  multidimensional.ipynb  operators.py  perturbedXXZ.ipynb  phase_diagram.py  studies.py  test_bosons.ipynb  test_matrices.ipynb  test_perturbation.ipynb  test_perturbation_tosend.ipynb  tests.py  utils.py
src/fastparticles/: indexing.py  matrixensembles.py  tests.py
src/fastparticles/experiments/: 1dlattice.py  main.py  ndlattice.py  pyamg_test.py
src/fastparticles/hilbert/: __init__.py  abstract_hilbert.py  pcspace.py
src/fastparticles/operators/: __init__.py  matrix.py  operators.py  pcoperators.py  random.py  special.py
src/fastparticles/statistics/: __init__.py  matrixensembles.py  matrixstats.py  studies.py
tests/: test_core.py
